# UserAuthBackend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/auth/: crud.py  database.py  main.py  models.py  permissions.py  schemas.py  sessions.py  settings.py
src/auth/routers/: __init__.py  secure.py  user.py
src/tests/: checks.py  conftest.py  data.py  test_auth.py
