[project]
name = "userauthbackend"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "gevent>=26.4.0",
    "httpx>=0.28.1",
    "psycopg2>=2.9.12",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "src/auth", "src/tests"]
addopts = ["-v", "--import-mode=importlib", "--cov=src/auth", "--cov-branch", "--cov-report=html", "--cov-report=term", "--cov-fail-under=80"]

[tool.coverage.run]
concurrency = ["thread", "gevent"]
